test/Fail/Issue5891.agda
-- AIM XXXV, 2022-05-06, issue #5891:
-- SizeUniv : SizeUniv was causing non-termination and inhabitation of Size< 0.

{-# OPTIONS --sized-types #-}

open import Agda.Primitive
open import Agda.Builtin.Size

data âŠ¥ : Set where

-- Original exploit:
-- data False : SizeUniv where

False : SizeUniv
False = (X : SizeUniv) â†’ X

-- Should fail.

-- Expected error:
-- SetÏ‰ != SizeUniv
-- when checking that the expression (X : SizeUniv) â†’ X has type SizeUniv


â„˜ : SizeUniv â†’ SizeUniv
â„˜ S = S â†’ SizeUniv

U : SizeUniv
U = âˆ€ (X : SizeUniv) â†’ (â„˜ (â„˜ X) â†’ X) â†’ â„˜ (â„˜ X)

Ï„ : â„˜ (â„˜ U) â†’ U
Ï„ t = Î» X f p â†’ t (Î» x â†’ p (f (x X f)))

Ïƒ : U â†’ â„˜ (â„˜ U)
Ïƒ s = s U Ï„

Î” : â„˜ U
Î” y = (âˆ€ p â†’ Ïƒ y p â†’ p (Ï„ (Ïƒ y))) â†’ False

Î© : U
Î© = Ï„ (Î» p â†’ (âˆ€ x â†’ Ïƒ x p â†’ p x))

R : âˆ€ p â†’ (âˆ€ x â†’ Ïƒ x p â†’ p x) â†’ p Î©
R _ ðŸ™ = ðŸ™ Î© (Î» x â†’ ðŸ™ (Ï„ (Ïƒ x)))

M : âˆ€ x â†’ Ïƒ x Î” â†’ Î” x
M _ ðŸš ðŸ› = ðŸ› Î” ðŸš (Î» p â†’ ðŸ› (Î» y â†’ p (Ï„ (Ïƒ y))))

L : (âˆ€ p â†’ (âˆ€ x â†’ Ïƒ x p â†’ p x) â†’ p Î©) â†’ False
L ðŸ˜ = ðŸ˜ Î” M (Î» p â†’ ðŸ˜ (Î» y â†’ p (Ï„ (Ïƒ y))))

false : False
false = L R

not-true : âˆ€ i â†’ Size< i
not-true i = false (Size< i)

data Empty (i : Size) : Set where
  emp : âˆ€{j : Size< i} â†’ Empty j â†’ Empty i

empty : âˆ€ i â†’ Empty i
empty i = empty (false (Size< i))

{-

-- -}


-- data Eq {â„“} (A : Set â„“) (x : A) : A â†’ Set â„“ where
--   refl : Eq A x x

-- -}
-- -}
-- -}
-- -}
